<resources>
    <string name="app_name">Photo Filter</string>
    <string name="brightnessBtn">Brightness</string>
    <string name="contrastBtn">Contrast</string>
    <string name="collageBtn">Collage</string>
    <string name="shapeBtn">Shape</string>
    <string name="textBtn">Text</string>
    <string name="cropBtn">Crop</string>
    <string name="flipBtn">Flip</string>
    <string name="rotateBtn">Rotate</string>
    <string name="filterBtn">Filter</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="highlight_effect">Highlight</string>
    <string name="black_effect">Black</string>
    <string name="default_effect">Default</string>
    <string name="invert_effect">Invert</string>
    <string name="effectBtn">Effect</string>
    <string name="greyscale_effect">Greyscale</string>
    <string name="gamma_effect">Gamma</string>
    <string name="contrast_effect">Contrast</string>
    <string name="emboss_effect">Emboss</string>
    <string name="engrave_effect">Engrave</string>
    <string name="flea_effect">Flea</string>
    <string name="gaussian_blur_effect">Gaussian Blur</string>
    <string name="round_corner_effect">Round Corner</string>
    <string name="sepia_effect">Sepia</string>
    <string name="sepiaG_effect">SepiaG</string>
    <string name="sepiaB_effect">SepiaB</string>
    <string name="smooth_effect">Smooth</string>
    <string name="tint_effect">Tint</string>
    <string name="sharpen_effect">Sharpen</string>
    <string name="black_filter">Black</string>
    <string name="red_filter">Red</string>
    <string name="green_filter">Green</string>
    <string name="blue_filter">Blue</string>
    <string name="hue_filter">Hue</string>
    <string name="saturation_filter">Saturation</string>
    <string name="cyan_filter">Cyan</string>
    <string name="yellow_filter">Yellow</string>
    <string name="green2_filter">Green2</string>
    <string name="crop_square">Square</string>
    <string name="crop_landscape">Landscape</string>
    <string name="crop_portrait">Portrait</string>
</resources>