<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svMenu"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dimen_large_32sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24sp">

        <TextView
            android:id="@+id/cropBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="@dimen/dimen_small_8sp"
            android:text="@string/cropBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_crop_24" />

        <TextView
            android:id="@+id/flipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="12sp"
            android:text="@string/flipBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_flip_24" />

        <TextView
            android:id="@+id/rotateLeftBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="@dimen/dimen_small_8sp"
            android:text="@string/rotateBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_rotate_24" />

        <TextView
            android:id="@+id/brightnessBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="@dimen/dimen_small_8sp"
            android:text="@string/brightnessBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_brightness_24" />

        <TextView
            android:id="@+id/contrastBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="@dimen/dimen_small_8sp"
            android:text="@string/contrastBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_contrast_24" />

        <TextView
            android:id="@+id/filterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="@dimen/dimen_small_8sp"
            android:text="@string/filterBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_filter_24" />

        <TextView
            android:id="@+id/effectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/dimen_small_8sp"
            android:paddingHorizontal="@dimen/dimen_small_8sp"
            android:text="@string/effectBtn"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableBottomCompat="@drawable/ic_effect_24" />

    </LinearLayout>
</HorizontalScrollView>